Added local storage hook and set node 18 as the minimum version required

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-hooks-library",
   "version": "1.0.0",
   "description": "A collection of useful React hooks",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
   "dev": "vite",
   "build": "tsc && vite build",
